# dojdevik

./: .env  README.md  dojdevik.db  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0ba3afeb1882_datetime_fix.py  29501f38fff0_start.py
backend/: .gitignore  main.py
backend/users/: models.py  schemas.py
frontend/app/public/: index.html
frontend/app/src/: App.css  App.js
frontend/app/src/components/BaseLayout/: BaseLayout.css  BaseLayout.js
frontend/app/src/components/BaseLayout/components/LoadingPage/: LoadingPage.css  LoadingPage.js
src/: database.py
src/users/: __init__.py  crud.py  models.py  schemas.py
src/weather/: __init__.py  weather.py
